chore(backend): remove support for attachments
